fixed "invisible" text label bug

--- a/ProtoypeF/src/main/resources/edu/wpi/cs3733/D22/teamF/labRequest.css
+++ b/ProtoypeF/src/main/resources/edu/wpi/cs3733/D22/teamF/labRequest.css
@@ -14,6 +14,6 @@
 }
 
 .text-field{
-    -fx-prompt-text-fill: white;
-    -fx-text-fill: white;
+    -fx-prompt-text-fill: black;
+    -fx-text-fill: black;
 }
